--- a/example/example.css
+++ b/example/example.css
@@ -104,7 +104,7 @@ body {
 }
 
 .dgtable-row-alt {
-    background: rgba(0, 0, 0, 0.02);
+    background: #fafafa;
 }
 
 .dgtable-row:first-child {
@@ -119,7 +119,6 @@ body {
 
 .dgtable-cell, .dgtable-cell-preview {
     padding: 4px 4px 4px;
-    height: 100%;
     font-size: 16px;
     line-height: 19px;
 }
@@ -127,6 +126,7 @@ body {
 .dgtable-cell {
     float: left;
     border-left: solid 1px #ccc;
+    min-height: 100%;
 }
 
 .dgtable-wrapper.rtl .dgtable-cell {
